welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
if(estDurBiscuit==false){
	recule();
}else{
	prendBiscuit();
	for (k<-1 to 5){
		avance();
	}
	poseBiscuit();
	recule();
}
